--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h2>Expected returns</h2>
   </hgroup>
   <article data-timings="">
-    <p>We choose 2 assets from the Mexican Stock Exchange (BMV), symbols &quot;<sup>MXX&quot;,</sup> &quot;CX&quot;. The first one is BMV a composite index, like the Dow Jones Industrial Average. The second is from CEMEX, a global building materials company.</p>
+    <p>We choose 2 assets from the Mexican Stock Exchange (BMV), symbols &quot;<sup>MXX&quot;,</sup> &quot;CX&quot;. The first one is a BMV  composite index, like the Dow Jones Industrial Average. The second is from CEMEX, a global building materials company.</p>
 
 <p>To estimate the expected returns:</p>
 
